Rename properties to be less tied to HAL.
Walk properties in DTO inside the HypermediaFilter and add them to the NestedMetadata dictionary.

--- a/WebApi.Hypermedia/WebApi.Hypermedia.csproj
+++ b/WebApi.Hypermedia/WebApi.Hypermedia.csproj
@@ -48,12 +48,13 @@
   <ItemGroup>
     <Compile Include="ActionLink.cs" />
     <Compile Include="DocumentationLink.cs" />
+    <Compile Include="HypermediaHandler.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Formatters\Hal\JsonConverters\JsonHalConverter.cs" />
     <Compile Include="Formatters\Hal\JsonHalMediaTypeFormatter.cs" />
     <Compile Include="HypermediaConfigurationExtensions.cs" />
     <Compile Include="HypermediaObject.cs" />
-    <Compile Include="HypermediaDataConfigurationBase.cs" />
+    <Compile Include="HypermediaObjectConfigurationBase.cs" />
     <Compile Include="Link.cs" />
     <Compile Include="LinkTypes.cs" />
     <Compile Include="MethodTypes.cs" />
